--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <title>yx的api仓库</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>这是爷的仓库，但是你啥也拿不到，走吧走吧……</h1>
 
+  
+        <h1> </h1>
+        <h1> </h1>
+        <h1> </h1>
+        <h1> </h1>
+        <h1> </h1>
+        <h1> </h1>
+        <h1> </h1>
+        <h1> </h1>
+        <h1> </h1>
+        <h1>api仅供站主使用，一经发现滥用必追究</h1>
+    </div>
+</body>
+</html>
